manifests/deploy-simple-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-webpage
  labels:
    author: Abhishek-Balaji
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: deploy-webpage 
          image: abhishekbalaji/practice:v1
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: cluster-svc
  labels:
    author: Abhishek-Balaji
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 8080

---
